k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodify-server-app
  labels:
    app: foodify-server-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foodify-server-app
  template:
    metadata:
      labels:
        app: foodify-server-app
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: foodify-server-app
          image: ghcr.io/mortadha-nefzi/foodify-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 40
            periodSeconds: 20
            failureThreshold: 5
